@@ -10,6 +10,7 @@ import datawave.ingest.mapreduce.job.metrics.MetricsConfiguration;
 import datawave.ingest.table.config.ShardTableConfigHelper;
 import datawave.ingest.table.config.TableConfigHelper;
 import datawave.iterators.PropogatingIterator;
+import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.IteratorSetting;
 import org.apache.accumulo.core.client.NamespaceExistsException;
@@ -32,6 +33,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
@@ -63,27 +65,27 @@ public class TableConfigurationUtil {
     private TreeMap<String,Map<Integer,Map<String,String>>> aggregators = new TreeMap<>();
     Configuration conf;
     private TableConfigCache tableConfigCache;
-    
+
     // for testing
     private boolean usingFileCache = false;
-    
+
     public TableConfigurationUtil(Configuration conf) {
         accumuloHelper = new AccumuloHelper();
         accumuloHelper.setup(conf);
         this.conf = conf;
         tableConfigCache = TableConfigCache.getCurrentCache(conf);
-        
+
     }
     
     public static Set<String> getJobOutputTableNames(Configuration conf) {
         HashSet tableNames = new HashSet<>();
-        
+
         String[] outputTables = conf.getStrings(JOB_OUTPUT_TABLE_NAMES);
-        
+
         if (null != outputTables && outputTables.length > 0) {
             tableNames = new HashSet(Arrays.asList(outputTables));
         }
-        
+
         return tableNames;
     }
     
@@ -103,7 +105,7 @@ public class TableConfigurationUtil {
         }
         conf.set(JOB_OUTPUT_TABLE_NAMES, outputTables);
     }
-    
+
     /**
      * @param conf
      *            configuration file that contains data handler types and other information necessary for determining the set of tables required
@@ -162,10 +164,10 @@ public class TableConfigurationUtil {
                     }
                     KeyValueFilter<?,?> filter;
                     try {
-                        filter = filterClass.newInstance();
-                    } catch (InstantiationException e) {
+                        filter = filterClass.getDeclaredConstructor().newInstance();
+                    } catch (InstantiationException | InvocationTargetException e) {
                         throw new IllegalArgumentException("Unable to instantiate " + filterClassNames, e);
-                    } catch (IllegalAccessException e) {
+                    } catch (IllegalAccessException | NoSuchMethodException e) {
                         throw new IllegalArgumentException("Unable to access default constructor for " + filterClassNames, e);
                     }
                     String[] filterTableNames = filter.getTableNames(conf);
@@ -183,7 +185,7 @@ public class TableConfigurationUtil {
         
         Set<String> extraTables = getTablesToAddToCache(conf);
         tables.addAll(extraTables);
-        
+
         return tables;
     }
     
@@ -196,15 +198,15 @@ public class TableConfigurationUtil {
             }
         }
         return tables;
-        
+
     }
-    
+
     public static String[] getTablePropertiesToCache(Configuration conf) {
         String[] properties = conf.getStrings(TABLE_PROPERTIES_TO_CACHE);
-        
+
         return properties;
     }
-    
+
     /**
      * Configure the accumulo tables (create and set aggregators etc)
      *
@@ -219,11 +221,12 @@ public class TableConfigurationUtil {
      * @return boolean of if the tables were configured
      */
     public boolean configureTables(Configuration conf) throws AccumuloSecurityException, AccumuloException, TableNotFoundException {
-        // Check to see if the tables exist
-        TableOperations tops = accumuloHelper.getConnector().tableOperations();
-        NamespaceOperations namespaceOperations = accumuloHelper.getConnector().namespaceOperations();
-        createAndConfigureTablesIfNecessary(getJobOutputTableNames(conf), tops, namespaceOperations, conf, log, false);
-        
+        try (AccumuloClient client = accumuloHelper.newClient()) {
+            // Check to see if the tables exist
+            TableOperations tops = client.tableOperations();
+            NamespaceOperations namespaceOperations = client.namespaceOperations();
+            createAndConfigureTablesIfNecessary(getJobOutputTableNames(conf), tops, namespaceOperations, conf, log, false);
+        }
         return true;
     }
     
@@ -385,10 +388,10 @@ public class TableConfigurationUtil {
                     }
                     KeyValueFilter<?,?> filter;
                     try {
-                        filter = filterClass.newInstance();
+                        filter = filterClass.getDeclaredConstructor().newInstance();
                     } catch (InstantiationException e) {
                         throw new IllegalArgumentException("Unable to instantiate " + filterClassNames, e);
-                    } catch (IllegalAccessException e) {
+                    } catch (IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                         throw new IllegalArgumentException("Unable to access default constructor for " + filterClassNames, e);
                     }
                     String[] filterTableNames = filter.getTableNames(conf);
@@ -423,7 +426,7 @@ public class TableConfigurationUtil {
     void setupTableConfigurationsCache(Configuration conf) throws IOException {
         
         if (conf.getBoolean(TableConfigCache.ACCUMULO_CONFIG_FILE_CACHE_ENABLE_PROPERTY, false)) {
-            
+
             try {
                 setTableConfigsFromCacheFile();
                 usingFileCache = true;
@@ -445,84 +448,87 @@ public class TableConfigurationUtil {
     
     private void setTableConfigsFromCacheFile() throws IOException {
         tableConfigCache.read();
-        
+
     }
     
     private void setTableConfigsFromAccumulo(Configuration conf) throws AccumuloSecurityException, AccumuloException, TableNotFoundException {
         tableConfigCache.setTableConfigs(getTablePropertiesFromAccumulo(accumuloHelper, log, conf));
         
     }
-    
+
     private void setTableConfigsFromConf(Configuration conf) throws IOException {
         tableConfigCache.setTableConfigs(deserializeTableConfigs(conf));
     }
-    
+
     private static Map<String,Map<String,String>> getTablePropertiesFromAccumulo(AccumuloHelper accumuloHelper, Logger log, Configuration conf)
                     throws AccumuloSecurityException, AccumuloException, TableNotFoundException {
         String propertyRegex = null;
         Pattern pattern = null;
         Map<String,Map<String,String>> configMap = new HashMap<>();
-        TableOperations tops = accumuloHelper.getConnector().tableOperations();
-        
-        String[] propertiesToCache = getTablePropertiesToCache(conf);
-        Set<String> tableNames = getTablesToAddToCache(conf);
-        
-        if (null != propertiesToCache && propertiesToCache.length > 0) {
-            propertyRegex = String.join("|", propertiesToCache);
-            pattern = Pattern.compile(propertyRegex);
-        }
-        
-        // if no table names are specified, assume we should cache properties for all of them
-        if (null == tableNames || tableNames.isEmpty()) {
-            tableNames = tops.tableIdMap().keySet();
-        }
-        
-        for (String table : tableNames) {
-            Map<String,String> tempmap = new HashMap<>();
-            Iterator it = tops.getProperties(table).iterator();
-            
-            while (it.hasNext()) {
-                Map.Entry<String,String> entry = (Map.Entry) it.next();
-                if (null != entry.getValue() && !entry.getValue().isEmpty()) {
-                    if (null != pattern) {
-                        Matcher m = pattern.matcher(entry.getKey());
-                        if (m.find()) {
+
+        try (AccumuloClient client = accumuloHelper.newClient()) {
+            TableOperations tops = client.tableOperations();
+
+            String[] propertiesToCache = getTablePropertiesToCache(conf);
+            Set<String> tableNames = getTablesToAddToCache(conf);
+
+            if (null != propertiesToCache && propertiesToCache.length > 0) {
+                propertyRegex = String.join("|", propertiesToCache);
+                pattern = Pattern.compile(propertyRegex);
+            }
+
+            // if no table names are specified, assume we should cache properties for all of them
+            if (null == tableNames || tableNames.isEmpty()) {
+                tableNames = tops.tableIdMap().keySet();
+            }
+
+            for (String table : tableNames) {
+                Map<String, String> tempmap = new HashMap<>();
+                Iterator it = tops.getProperties(table).iterator();
+
+                while (it.hasNext()) {
+                    Map.Entry<String, String> entry = (Map.Entry) it.next();
+                    if (null != entry.getValue() && !entry.getValue().isEmpty()) {
+                        if (null != pattern) {
+                            Matcher m = pattern.matcher(entry.getKey());
+                            if (m.find()) {
+                                tempmap.put(entry.getKey(), entry.getValue().replaceAll("\n|\r", ""));
+                            }
+                        }
+                        // if we haven't limited the properties we want to cache, add them all
+                        else {
                             tempmap.put(entry.getKey(), entry.getValue().replaceAll("\n|\r", ""));
                         }
                     }
-                    // if we haven't limited the properties we want to cache, add them all
-                    else {
-                        tempmap.put(entry.getKey(), entry.getValue().replaceAll("\n|\r", ""));
-                    }
+
                 }
-                
+                configMap.put(table, tempmap);
             }
-            configMap.put(table, tempmap);
         }
-        
+
         return configMap;
     }
-    
+
     private void setTableCombiners(String tableName, Map<Integer,Map<String,String>> list) {
         this.combiners.put(tableName, list);
     }
-    
+
     private void setTableAggregators(String tableName, Map<Integer,Map<String,String>> list) {
         this.aggregators.put(tableName, list);
     }
-    
+
     public Map<Integer,Map<String,String>> getTableCombiners(String tableName) {
         return this.combiners.get(tableName);
     }
-    
+
     public Map<Integer,Map<String,String>> getTableAggregators(String tableName) {
         return this.aggregators.get(tableName);
     }
-    
+
     public boolean isUsingFileCache() {
         return usingFileCache;
     }
-    
+
     public void setTableItersPrioritiesAndOpts() throws IOException {
         if (!tableConfigCache.isInitialized()) {
             try {
@@ -531,72 +537,72 @@ public class TableConfigurationUtil {
                 setupTableConfigurationsCache(conf);
             }
         }
-        
+
         // This used to be set arbitrarily to scan scope. We have since decided it is more appropriate to use the minc scope. Some unsuspecting dev might think
         // that setting a scan time aggregator would have no effect on data being written into the database, but ingest was being affected in this somewhat
         // covert manner. We feel this new approach to be much less accident-prone.
         IteratorUtil.IteratorScope scope = IteratorUtil.IteratorScope.minc;
-        
+
         // Go through all of the configuration properties of this table and figure out which
         // properties represent iterator configuration. For those that do, store the iterator
         // setup and options in a map so that we can group together all of the options for each
         // iterator.
-        
+
         Set<String> configuredTables = getJobOutputTableNames(conf);
-        
+
         if (!configuredTables.isEmpty()) {
             for (String table : configuredTables) {
                 Map<Integer,Map<String,String>> aggregatorMap = new HashMap<>();
                 Map<Integer,Map<String,String>> combinerMap = new HashMap<>();
                 HashMap<String,Map<String,String>> allOptions = new HashMap<>();
                 ArrayList<IteratorSetting> iters = new ArrayList<>();
-                
+
                 Map<String,String> tableProps = tableConfigCache.getTableProperties(table);
                 if (null == tableProps || tableProps.isEmpty()) {
                     log.warn("No table properties found for " + table);
                     continue;
                 }
                 for (Map.Entry<String,String> entry : tableProps.entrySet()) {
-                    
+
                     if (entry.getKey().startsWith(Property.TABLE_ITERATOR_PREFIX.getKey())) {
-                        
+
                         String suffix = entry.getKey().substring(Property.TABLE_ITERATOR_PREFIX.getKey().length());
                         String suffixSplit[] = suffix.split("\\.", 4);
-                        
+
                         if (!suffixSplit[0].equals(scope.name())) {
                             continue;
                         }
-                        
+
                         if (suffixSplit.length == 2) {
                             // get the Iterator priority and class
                             String sa[] = entry.getValue().split(",");
                             int prio = Integer.parseInt(sa[0]);
                             String className = sa[1];
                             iters.add(new IteratorSetting(prio, suffixSplit[1], className));
-                            
+
                         } else if (suffixSplit.length == 4 && suffixSplit[2].equals("opt")) {
                             // get the iterator options
                             String iterName = suffixSplit[1];
                             String optName = suffixSplit[3];
-                            
+
                             Map<String,String> options = allOptions.get(iterName);
                             if (options == null) {
                                 options = new HashMap<>();
                                 allOptions.put(iterName, options);
                             }
-                            
+
                             options.put(optName, entry.getValue());
-                            
+
                         } else {
                             log.warn("Unrecognizable option: " + entry.getKey());
                         }
                     }
                 }
-                
+
                 // Now go through all of the iterators, and for those that are aggregators, store
                 try {
                     for (IteratorSetting iter : iters) {
-                        
+
                         Class<?> klass = Class.forName(iter.getIteratorClass());
                         if (PropogatingIterator.class.isAssignableFrom(klass)) {
                             Map<String,String> options = allOptions.get(iter.getName());
@@ -604,7 +610,7 @@ public class TableConfigurationUtil {
                                 aggregatorMap.put(iter.getPriority(), options);
                             } else
                                 log.trace("Skipping iterator class " + iter.getIteratorClass() + " since it doesn't have options.");
-                            
+
                         }
                         if (Combiner.class.isAssignableFrom(klass)) {
                             Map<String,String> options = allOptions.get(iter.getName());
@@ -616,17 +622,17 @@ public class TableConfigurationUtil {
                             }
                         } else {
                             log.trace("Skipping iterator class " + iter.getIteratorClass() + " since it doesn't appear to be a combiner.");
-                            
+
                         }
                     }
-                    
+
                     if (!aggregatorMap.isEmpty()) {
                         setTableAggregators(table, aggregatorMap);
                     }
                     if (!combinerMap.isEmpty()) {
                         setTableCombiners(table, combinerMap);
                     }
-                    
+
                 } catch (ClassNotFoundException e) {
                     throw new IOException("Unable to configure iterators for " + table, e);
                 }
@@ -634,9 +640,9 @@ public class TableConfigurationUtil {
         } else {
             log.warn("No output tables configured.");
         }
-        
+
     }
-    
+
     public Map<String,String> getTableProperties(String tableName) throws IOException {
         if (!tableConfigCache.isInitialized()) {
             try {
@@ -646,38 +652,38 @@ public class TableConfigurationUtil {
             }
         }
         return tableConfigCache.getTableProperties(tableName);
-        
+
     }
-    
+
     public Map<String,Set<Text>> getLocalityGroups(String tableName) throws IOException {
-        
+
         String prefix = Property.TABLE_LOCALITY_GROUP_PREFIX.getKey();
         Map<String,Set<Text>> groupsNfams = new HashMap<>();
         for (Map.Entry<String,String> entry : tableConfigCache.getTableProperties(tableName).entrySet()) {
             if (entry.getKey().startsWith(prefix)) {
-                
+
                 String group = entry.getKey().substring(prefix.length());
                 String[] parts = group.split("\\.");
                 String[] famStr = entry.getValue().split(",");
                 Set<Text> colFams = new HashSet<>();
                 for (String fam : famStr) {
                     colFams.add(new Text(fam));
-                    
+
                 }
                 groupsNfams.put(parts[0], colFams);
-                
+
             }
-            
+
         }
         return groupsNfams;
-        
+
     }
-    
+
     public void serializeTableConfgurationIntoConf(Configuration conf) throws IOException {
-        
+
         Set<String> tables = getJobOutputTableNames(conf);
         setupTableConfigurationsCache(conf);
-        
+
         if (null == tables || tables.isEmpty()) {
             log.warn("No output tables configured for job");
         } else {
@@ -692,7 +698,7 @@ public class TableConfigurationUtil {
             }
         }
     }
-    
+
     public static Map<String,Map<String,String>> deserializeTableConfigs(Configuration conf) throws IOException {
         Long start = System.currentTimeMillis();
         Set<String> tables = getJobOutputTableNames(conf);
@@ -703,7 +709,7 @@ public class TableConfigurationUtil {
             for (String tableName : tables) {
                 String tableConfigString = conf.get(tableName + TABLE_CONFIGURATION_PROPERTY);
                 Map<String,String> tableConf = null;
-                
+
                 if (null != tableConfigString) {
                     try {
                         byte[] data = Base64.getDecoder().decode(tableConfigString);
@@ -716,18 +722,18 @@ public class TableConfigurationUtil {
                         log.error("Unable to deserialize configuration for table " + tableName);
                         throw new IOException(e);
                     }
-                    
+
                 } else {
                     throw new IOException("Job has requested a table which was not configured: " + tableName);
                 }
             }
         }
         Long end = System.currentTimeMillis();
-        
+
         log.info("Time deserializing table configs:" + (end - start) + "ms");
         return tableConfigMap;
     }
-    
+
     public void updateCacheFile() throws AccumuloSecurityException, AccumuloException, TableNotFoundException {
         setTableConfigsFromAccumulo(conf);
         this.tableConfigCache.update();
