@@ -99,6 +99,7 @@ import org.apache.log4j.Logger;
 import org.apache.lucene.util.fst.FST;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.text.MessageFormat;
@@ -136,7 +137,7 @@ public class IteratorBuildingVisitor extends BaseVisitor {
     protected Map<Entry<String,String>,Entry<Key,Value>> limitedMap = null;
     protected Collection<String> includeReferences = UniversalSet.instance();
     protected Collection<String> excludeReferences = Collections.emptyList();
-    protected Predicate<Key> datatypeFilter = Predicates.<Key> alwaysTrue();
+    protected Predicate<Key> datatypeFilter;
     protected TimeFilter timeFilter;
     
     protected FileSystemCache hdfsFileSystem;
@@ -164,7 +165,7 @@ public class IteratorBuildingVisitor extends BaseVisitor {
     protected Set<String> termFrequencyFields = Collections.emptySet();
     protected boolean allowTermFrequencyLookup = true;
     protected Set<String> indexOnlyFields = Collections.emptySet();
-    protected FieldIndexAggregator fiAggregator = new IdentityAggregator(null);
+    protected FieldIndexAggregator fiAggregator;
     
     protected CompositeMetadata compositeMetadata;
     protected int compositeSeekThreshold = 10;
@@ -445,7 +446,7 @@ public class IteratorBuildingVisitor extends BaseVisitor {
             builder.setFieldsToAggregate(fieldsToAggregate);
             builder.setTimeFilter(timeFilter);
             builder.setAttrFilter(attrFilter);
-            builder.setDatatypeFilter(datatypeFilter);
+            builder.setDatatypeFilter(getDatatypeFilter());
             builder.setEnv(env);
             builder.setTermFrequencyAggregator(getTermFrequencyAggregator(identifier, sourceNode, attrFilter, tfNextSeek));
             builder.setNode(rootNode);
@@ -580,8 +581,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
         }
         IndexIteratorBuilder builder = null;
         try {
-            builder = iteratorBuilderClass.asSubclass(IndexIteratorBuilder.class).newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            builder = iteratorBuilderClass.asSubclass(IndexIteratorBuilder.class).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
         builder.setQueryId(queryId);
@@ -589,8 +590,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
         builder.setTypeMetadata(typeMetadata);
         builder.setFieldsToAggregate(fieldsToAggregate);
         builder.setTimeFilter(timeFilter);
-        builder.setDatatypeFilter(datatypeFilter);
-        builder.setKeyTransform(fiAggregator);
+        builder.setDatatypeFilter(getDatatypeFilter());
+        builder.setKeyTransform(getFiAggregator());
         builder.setEnv(env);
         builder.setNode(node);
         node.childrenAccept(this, builder);
@@ -668,8 +669,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
         builder.setTimeFilter(getTimeFilter(node));
         builder.setTypeMetadata(typeMetadata);
         builder.setFieldsToAggregate(fieldsToAggregate);
-        builder.setDatatypeFilter(datatypeFilter);
-        builder.setKeyTransform(fiAggregator);
+        builder.setDatatypeFilter(getDatatypeFilter());
+        builder.setKeyTransform(getFiAggregator());
         builder.setEnv(env);
         builder.forceDocumentBuild(!limitLookup && this.isQueryFullySatisfied);
         builder.setNode(node);
@@ -908,8 +909,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
     protected NestedIterator<Key> createExceededCheck(String identifier, LiteralRange<?> range, JexlNode rootNode) {
         IndexIteratorBuilder builder = null;
         try {
-            builder = iteratorBuilderClass.asSubclass(IndexIteratorBuilder.class).newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            builder = iteratorBuilderClass.asSubclass(IndexIteratorBuilder.class).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
         
@@ -921,8 +922,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
         builder.setTimeFilter(TimeFilter.alwaysTrue());
         builder.setTypeMetadata(typeMetadata);
         builder.setFieldsToAggregate(fieldsToAggregate);
-        builder.setDatatypeFilter(datatypeFilter);
-        builder.setKeyTransform(fiAggregator);
+        builder.setDatatypeFilter(getDatatypeFilter());
+        builder.setKeyTransform(getFiAggregator());
         builder.setEnv(env);
         builder.setNode(rootNode);
         
@@ -956,8 +957,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
         builder.setTimeFilter(getTimeFilter(node));
         builder.setTypeMetadata(typeMetadata);
         builder.setFieldsToAggregate(fieldsToAggregate);
-        builder.setDatatypeFilter(datatypeFilter);
-        builder.setKeyTransform(fiAggregator);
+        builder.setDatatypeFilter(getDatatypeFilter());
+        builder.setKeyTransform(getFiAggregator());
         builder.setEnv(env);
         
         node.childrenAccept(this, builder);
@@ -1413,8 +1414,8 @@ public class IteratorBuildingVisitor extends BaseVisitor {
         builder.setCompositeMetadata(compositeMetadata);
         builder.setCompositeSeekThreshold(compositeSeekThreshold);
         builder.setFieldsToAggregate(fieldsToAggregate);
-        builder.setDatatypeFilter(datatypeFilter);
-        builder.setKeyTransform(fiAggregator);
+        builder.setDatatypeFilter(getDatatypeFilter());
+        builder.setKeyTransform(getFiAggregator());
         builder.setIvaratorCacheDirs(getIvaratorCacheDirs());
         builder.setHdfsFileCompressionCodec(hdfsFileCompressionCodec);
         builder.setQueryLock(queryLock);
@@ -1457,6 +1458,30 @@ public class IteratorBuildingVisitor extends BaseVisitor {
                 }
             }
         }
+    }
+    
+    /**
+     * Get the DatatypeFilter
+     *
+     * @return a DatatypeFilter
+     */
+    public Predicate<Key> getDatatypeFilter() {
+        if (datatypeFilter == null) {
+            datatypeFilter = Predicates.alwaysTrue();
+        }
+        return datatypeFilter;
+    }
+    
+    /**
+     * Get the FieldIndexAggregator
+     *
+     * @return a FieldIndexAggregator
+     */
+    public FieldIndexAggregator getFiAggregator() {
+        if (fiAggregator == null) {
+            fiAggregator = new IdentityAggregator(null);
+        }
+        return fiAggregator;
     }
     
     public IteratorBuildingVisitor setRange(Range documentRange) {
